...
        uiState.showInfoMessage = true
    }

    // MARK: - Command Buttons

    /// Undo button for app commands
    var undoButton: some View {
        Button(action: { [self] in
            Task { @MainActor in
                withAnimation {
                    undo()
                    callFetch()
                }
            }
        }) {
            Label("Undo", systemImage: imgUndo)
                .accessibilityIdentifier("undoButton")
                .help("undo an action")
        }
        .disabled(!canUndo)
        .opacity(canUndo ? 1.0 : 0.5)
        .keyboardShortcut("z", modifiers: [.command])
    }

    /// Redo button for app commands
    var redoButton: some View {
        Button(action: { [self] in
            Task { @MainActor in
                withAnimation {
                    redo()
                    callFetch()
                }
            }
        }) {
            Label("Redo", systemImage: imgRedo)
                .accessibilityIdentifier("redoButton")
                .help("redo an action")
        }
        .disabled(!canRedo)
        .opacity(canRedo ? 1.0 : 0.5)
        .keyboardShortcut("Z", modifiers: [.command, .shift])
...
        Button(action: { [self] in
            moveWithPriorityTracking(task: item, to: .closed)
        }) {
            Label("Close", systemImage: imgClosed)
        }
        .help("Close the task")
        .accessibilityIdentifier("closeButton")
        .disabled(!item.canBeClosed)
    }

    /// Kill button for task items
    func killButton(item: TaskItem) -> some View {
        Button(action: { [self] in
...
        }) {
            Label("Pending", systemImage: imgPendingResponse)
        }
        .help(
            "Mark as Pending Response. That is the state for a task that you completed, but you are waiting for a response, acknowledgement or similar."
        )
        .accessibilityIdentifier("pendingResponseButton")
        .disabled(!item.canBeMovedToPendingResponse)
    }

    /// Priority button for task items
    func priorityButton(item: TaskItem) -> some View {
        Button(action: { [self] in
...
