...
            appComponents.uiState.showInfoMessage = true
        }) {
            Label("Show Statistics", systemImage: "chart.bar").help("Show task statistics")
        }
    }
    
    var compassCheckButton: some View {
        Button(action: {
            appComponents.compassCheckManager.startCompassCheckNow()
        }) {
            Label("Compass Check", systemImage: "location.north").help("Start compass check")
        }
    }
...
