...
            addNewItem()
        }) {
            Label("Add New Task", systemImage: imgAddItem)
                .foregroundStyle(TaskItemState.open.color)
                .help("Add a new task")
        }
        .accessibilityIdentifier("addTaskButton")
        .popoverTip(AddFirstGoalTip())
    }

    /// Export button for app commands
    var exportButton: some View {
        Button(action: { [self] in
...
